Fixed nav bar spacing when zoomed out

--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,6 @@ body{
     margin: 0;
 }
 
-.filler{
-    display: flex;
-    flex-direction: column;
-}
-
 .banner{
     width: 100%;
 
@@ -32,6 +27,7 @@ body{
 
 .nav{
     width: 100%;
+    display: inline-block;
 
     font-size: 15px;
     font-weight: 500;
